Fix alignment

--- a/src/app/shared/components/fy-number/fy-number.component.scss
+++ b/src/app/shared/components/fy-number/fy-number.component.scss
@@ -9,7 +9,7 @@
     line-height: 18px;
     color: $blue-black;
     width: 100%;
-    margin: 6px 0;
+    margin: 4px 0;
     padding: 0;
   }
 }
